# parakh

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run.bat  run.sh
.github/workflows/: ci.yml
examples/invoices/: ground_truth.json  predictions.json  run_demo.py  samples.json  schema.json
parakh/: __init__.py  cli.py  confidence.py  fewshot.py  metrics.py  pipeline.py  report.py
parakh/extractors/: base.py  docling_adapter.py  mock.py  openai_compat.py
parakh/review/: __init__.py  server.py
plumb/: __init__.py  cli.py  confidence.py  leaderboard.py  metrics.py  normalize.py  pipeline.py  queue.py  report.py  store.py
plumb/extractors/: __init__.py  base.py  docling_adapter.py  openai_compat.py
plumb/review/: server.py
tests/: test_confidence.py  test_fewshot.py  test_leaderboard.py  test_metrics.py  test_pipeline.py  test_queue.py  test_review_server.py  test_store.py
