[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "plumb-eval"
version = "0.1.0"
description = "Self-hosted accuracy evals + correction loop for document extraction. Bring your own model."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "sarcascoder" }]
keywords = ["ocr", "document-extraction", "llm-eval", "local-llm", "vlm", "confidence", "human-in-the-loop", "self-hosted", "pydantic"]
dependencies = []   # core is pure stdlib by design
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: General",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/sarcascoder/plumb"
Repository = "https://github.com/sarcascoder/plumb"
Issues = "https://github.com/sarcascoder/plumb/issues"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
plumb = "plumb.cli:main"

[tool.setuptools]
packages = ["plumb", "plumb.extractors", "plumb.review"]

[tool.setuptools.package-data]
plumb = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
