[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "parakh"
version = "0.1.0"
description = "Self-hosted accuracy evals + correction loop for document extraction. Bring your own model."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "sarcascoder" }]
keywords = ["ocr", "document-extraction", "llm-eval", "local-llm", "vlm", "confidence", "human-in-the-loop", "self-hosted", "pydantic"]
dependencies = []   # core is pure stdlib by design
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: General",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/sarcascoder/parakh"
Repository = "https://github.com/sarcascoder/parakh"
Issues = "https://github.com/sarcascoder/parakh/issues"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
parakh = "parakh.cli:main"

[tool.setuptools]
packages = ["parakh", "parakh.extractors", "parakh.review"]

[tool.setuptools.package-data]
parakh = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
